@@ -12,6 +12,7 @@
  */
 
 /**
+ * Main Colors
  * #163365	Text background/border
  * #1c4181  Alternative text background 1/border
  * #1b3f7c	Alternative text background 2/border
@@ -131,7 +132,7 @@ a:hover,a:focus {
 }
 
 #module-status {
-	background: url(../images/mini_icon.png) 3px 5px no-repeat;
+	/*background: url(../images/mini_icon.png) 3px 5px no-repeat;*/
 }
 
 #module-status .preview {
